# setsuna-lang

./: .gitignore  CMakeLists.txt  README.md  netlify.toml
.cache/clangd/index/: ast.hpp.B1D7D1951C0A1D14.idx  builtins.cpp.1EA4353649B4F053.idx  builtins.hpp.EC76908DBFEC4A0D.idx  environment.cpp.414EE580BBCC4E3F.idx  environment.hpp.102A82BE0AE537AC.idx  error.hpp.7104574D8866DBAD.idx  evaluator.cpp.3A0F774356A0C762.idx  evaluator.hpp.64932D05BD508A54.idx  lexer.cpp.9F596F6DE9D30691.idx  lexer.hpp.DDD9EA2C5BDACD30.idx  main.cpp.8AEDEF22F8964F55.idx  parser.cpp.E9D35DE07F8BF777.idx  parser.hpp.29C9814D8215D780.idx  types.hpp.9EDECAE42B5F936B.idx  (+3 more)
.claude/: settings.local.json
docs/: docs.json  mdx-components.tsx  setsuna-lang.out  setsuna-lang.tex  source.config.ts
docs-old/: installation.mdx  introduction.mdx  quickstart.mdx  setsuna-lang.aux  setsuna-lang.tex  setsuna-lang.toc
docs-old/advanced/: algebraic-types.mdx
docs-old/basics/: control-flow.mdx  types.mdx  variables.mdx
docs-old/reference/: grammar.mdx  io.mdx  list-ops.mdx  operators.mdx  strings.mdx
docs/advanced/: pattern-matching.mdx
docs/app/: global.css  layout.tsx
docs/lib/: layout.shared.tsx
docs/reference/: builtins.mdx  math.mdx
examples/: adt.stsn  factorial.stsn  fibonacci.stsn  list_ops.stsn  module.stsn  print.stsn  records.stsn
src/: ast.hpp  builtins.cpp  builtins.hpp  environment.cpp  environment.hpp  error.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  typechecker.cpp  typechecker.hpp  types.hpp  value.hpp
stdlib/: prelude.stsn
(+26 files in other folders)
